// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms/Login form Form For Login 1`] = `
Array [
  <div>
    <div
      aria-label="form-container"
      className="css-10996i2"
    >
      <div
        className="css-1bgnyev"
      >
        <div
          className="css-0"
        >
          <h1
            className="chakra-heading css-1dklj6k"
          >
            Login
          </h1>
          <p
            className="chakra-text css-17v5nre"
          >
            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem, dicta?
          </p>
           
          <button
            className="chakra-button css-7pnid4"
            onClick={[Function]}
            type="button"
          >
            <span
              className="chakra-button__icon css-1wh2kri"
            >
              <svg
                aria-hidden={true}
                enableBackground="new 0 0 48 48"
                fill="currentColor"
                focusable={false}
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                version="1.1"
                viewBox="0 0 48 48"
                width="1em"
                x="0px"
                xmlns="http://www.w3.org/2000/svg"
                y="0px"
              >
                <path
                  d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12
	c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24
	c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"
                  fill="#FFC107"
                />
                <path
                  d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657
	C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"
                  fill="#FF3D00"
                />
                <path
                  d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36
	c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"
                  fill="#4CAF50"
                />
                <path
                  d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571
	c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z"
                  fill="#1976D2"
                />
              </svg>
            </span>
            Sign In with the Google
          </button>
          <div
            aria-label="divider"
            className="css-psi44y"
          >
            <div
              className="css-1bvejst"
            />
            <span
              className="chakra-text css-e5dvqz"
            >
              or sign in with email
            </span>
            <div
              className="css-1bvejst"
            />
          </div>
        </div>
        <form
          action="#"
          aria-label="login-form"
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div
            className="chakra-stack css-15esdq8"
          >
            <div
              className="chakra-form-control css-1kxonj9"
              role="group"
            >
              <label
                className="chakra-form__label css-ipvten"
                htmlFor="field-1"
                id="field-1-label"
              >
                email
                <span
                  aria-hidden={true}
                  className="chakra-form__required-indicator css-1ssjhh"
                  role="presentation"
                >
                  *
                </span>
              </label>
              <div
                className="chakra-input__group css-4302v8"
                name="email"
              >
                <input
                  aria-label="email"
                  aria-required={true}
                  className="chakra-input css-eq0bw6"
                  disabled={false}
                  id="email"
                  name="email"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  type="email"
                  value=""
                />
              </div>
            </div>
            <div
              className="chakra-form-control css-1kxonj9"
              role="group"
            >
              <label
                className="chakra-form__label css-ipvten"
                htmlFor="field-2"
                id="field-2-label"
              >
                Password
                <span
                  aria-hidden={true}
                  className="chakra-form__required-indicator css-1ssjhh"
                  role="presentation"
                >
                  *
                </span>
              </label>
              <div
                className="chakra-input__group css-4302v8"
                name="psw"
              >
                <input
                  aria-label="psw"
                  aria-required={true}
                  className="chakra-input css-eq0bw6"
                  disabled={false}
                  id="psw"
                  name="psw"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  type="password"
                  value=""
                />
              </div>
            </div>
            <a
              className="chakra-link css-1n5pm6w"
            >
              Forgot password?
            </a>
            <button
              className="chakra-button css-5dd274"
              type="submit"
            >
              Login
            </button>
            <span
              className="chakra-text css-b95k16"
            >
              Not registered yet?
              <a
                className="chakra-link css-iejcgt"
                href="/register"
                onClick={[Function]}
              >
                Create an account.
              </a>
            </span>
          </div>
        </form>
      </div>
      <img
        alt="test_undraw.svg"
        className="chakra-image css-8fg9h"
        src="test_undraw.svg"
      />
    </div>
  </div>,
  <span />,
]
`;

exports[`Storyshots Organisms/Login form Form For Signup 1`] = `
Array [
  <div>
    <div
      aria-label="form-container"
      className="css-10996i2"
    >
      <div
        className="css-1bgnyev"
      >
        <div
          className="css-0"
        >
          <h1
            className="chakra-heading css-1dklj6k"
          >
            Sign Up
          </h1>
          <p
            className="chakra-text css-1lrc58f"
          >
            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem, dicta?
          </p>
           
          <button
            className="chakra-button css-7pnid4"
            onClick={[Function]}
            type="button"
          >
            <span
              className="chakra-button__icon css-1wh2kri"
            >
              <svg
                aria-hidden={true}
                enableBackground="new 0 0 48 48"
                fill="currentColor"
                focusable={false}
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                version="1.1"
                viewBox="0 0 48 48"
                width="1em"
                x="0px"
                xmlns="http://www.w3.org/2000/svg"
                y="0px"
              >
                <path
                  d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12
	c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24
	c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"
                  fill="#FFC107"
                />
                <path
                  d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657
	C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"
                  fill="#FF3D00"
                />
                <path
                  d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36
	c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"
                  fill="#4CAF50"
                />
                <path
                  d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571
	c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z"
                  fill="#1976D2"
                />
              </svg>
            </span>
            Sign In with the Google
          </button>
          <div
            aria-label="divider"
            className="css-psi44y"
          >
            <div
              className="css-1bvejst"
            />
            <span
              className="chakra-text css-e5dvqz"
            >
              or sign up with enail
            </span>
            <div
              className="css-1bvejst"
            />
          </div>
        </div>
        <form
          action="#"
          aria-label="signup-form"
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div
            className="css-1wgptd8"
          >
            <div
              className="chakra-form-control css-1kxonj9"
              role="group"
            >
              <label
                className="chakra-form__label css-ipvten"
                htmlFor="field-1"
                id="field-1-label"
              >
                name
                <span
                  aria-hidden={true}
                  className="chakra-form__required-indicator css-1ssjhh"
                  role="presentation"
                >
                  *
                </span>
              </label>
              <div
                className="chakra-input__group css-4302v8"
                name="name"
              >
                <input
                  aria-label="name"
                  aria-required={true}
                  className="chakra-input css-eq0bw6"
                  disabled={false}
                  id="name"
                  name="name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              className="chakra-form-control css-1kxonj9"
              role="group"
            >
              <label
                className="chakra-form__label css-ipvten"
                htmlFor="field-2"
                id="field-2-label"
              >
                Email
                <span
                  aria-hidden={true}
                  className="chakra-form__required-indicator css-1ssjhh"
                  role="presentation"
                >
                  *
                </span>
              </label>
              <div
                className="chakra-input__group css-4302v8"
                name="email"
              >
                <input
                  aria-label="email"
                  aria-required={true}
                  className="chakra-input css-eq0bw6"
                  disabled={false}
                  id="email"
                  name="email"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  type="email"
                  value=""
                />
              </div>
            </div>
            <div
              className="chakra-form-control css-1kxonj9"
              role="group"
            >
              <label
                className="chakra-form__label css-ipvten"
                htmlFor="field-3"
                id="field-3-label"
              >
                Password
                <span
                  aria-hidden={true}
                  className="chakra-form__required-indicator css-1ssjhh"
                  role="presentation"
                >
                  *
                </span>
              </label>
              <div
                className="chakra-input__group css-4302v8"
                name="password"
              >
                <input
                  aria-label="password"
                  aria-required={true}
                  className="chakra-input css-eq0bw6"
                  disabled={false}
                  id="password"
                  name="password"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  type="password"
                  value=""
                />
              </div>
            </div>
            <div
              className="chakra-form-control css-1kxonj9"
              role="group"
            >
              <label
                className="chakra-form__label css-ipvten"
                htmlFor="field-4"
                id="field-4-label"
              >
                Password again
                <span
                  aria-hidden={true}
                  className="chakra-form__required-indicator css-1ssjhh"
                  role="presentation"
                >
                  *
                </span>
              </label>
              <div
                className="chakra-input__group css-4302v8"
                name="passwordAgain"
              >
                <input
                  aria-label="passwordAgain"
                  aria-required={true}
                  className="chakra-input css-eq0bw6"
                  disabled={false}
                  id="passwordAgain"
                  name="passwordAgain"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  type="password"
                  value=""
                />
              </div>
            </div>
            <div
              className="css-0"
            >
              <a
                className="chakra-link css-1n5pm6w"
              >
                Forgot password?
              </a>
              <button
                className="chakra-button css-5dd274"
                type="submit"
              >
                Sign Up
              </button>
              <span
                className="chakra-text css-b95k16"
              >
                Already have an account?
                <a
                  className="chakra-link css-iejcgt"
                  href="/login"
                  onClick={[Function]}
                >
                  Sign in.
                </a>
              </span>
            </div>
          </div>
        </form>
      </div>
      <img
        alt="test_undraw.svg"
        className="chakra-image css-8fg9h"
        src="test_undraw.svg"
      />
    </div>
  </div>,
  <span />,
]
`;
